tests/baselines/reference/directReferenceToNull.errors.txt
directReferenceToNull.ts(1,8): error TS2304: Cannot find name 'Null'.


==== directReferenceToNull.ts (1 errors) ====
    var x: Null;
           ~~~~
!!! error TS2304: Cannot find name 'Null'.